--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,8 @@ machine:
     version: 6.4.0
 test:
   pre:
+    - npm install --only=dev
     - npm install -g karma jasmine bower
-    - npm update
     - bower install
   override:
     - karma start --single-run
