--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - 6.4.0
 before_script:
   - npm install --only=dev
+  - npm install karma-jasmine
   - npm install -g karma jasmine bower
   - bower install
 script:
