--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: node_js
 node_js:
   - 6.4.0
 before_script:
-  - npm install --only=dev
-  - npm install karma-jasmine
+  - npm update
   - npm install -g karma jasmine bower
   - bower install
 script:
