--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,7 @@ machine:
     version: 6.4.0
 test:
   pre:
-    - npm install --only=dev
-    - npm install karma-jasmine
+    - npm update
     - npm install -g karma jasmine bower
     - bower install
   override:
