--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "John Conrad Lumacad <jcmlumacad@tmj.ph>",
   "license": "ISC",
   "devDependencies": {
+    "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
