--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - 6.4.0
 before_script:
   - npm update
-  - npm install -g karma jasmine bower
+  - npm install -g karma jasmine jasmine-core bower
   - bower install
 script:
   - karma start --single-run
