--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "license": "ISC",
   "devDependencies": {
     "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0"
+    "karma-chrome-launcher": "^2.0.0"
   }
 }
