--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: node_js
 node_js:
   - 6.4.0
 before_script:
-  - npm update
   - npm install -g karma karma-jasmine jasmine jasmine-core bower
   - bower install
 script:
-  - karma start --single-run
+  - karma start --single-run --browsers /usr/local/bin/custom-browser.sh
