--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: 6.4.0
 test:
   pre:
-    - npm install -g karma karma-jasmine jasmine jasmine-core bower
+    - npm install -g karma karma-jasmine jasmine jasmine-core phantomjs karma-phantomjs-launcher bower
     - bower install
   override:
-    - karma start --single-run --browsers PhantomJS
+    - karma start --single-run --browsers PhantomJS_custom
