--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "devDependencies": {
     "karma": "^1.5.0",
     "karma-phantomjs-launcher": "^1.0.2"
+  },
+  "dependencies": {
+    "mongoose": "^4.8.5"
   }
 }
